unpackaged/main/default/objects/FSL_Audio_Preferences__c/FSL_Audio_Preferences__c.object-meta.xml
<CustomObject>
    <label>FSL Audio Preferences</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>FSL Audio Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSL Audio Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>