unpackaged/main/default/objects/FSL_Audio_Preferences__c/fields/Notification_on_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Notification_on_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification on Cancellation</label>
    <type>Checkbox</type>
</CustomField>