unpackaged/main/default/objects/FSL_Audio_Preferences__c/fields/Notifications_on_New_Call__c.field-meta.xml
<CustomField>
    <fullName>Notifications_on_New_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notifications on New Call</label>
    <type>Checkbox</type>
</CustomField>