unpackaged/main/default/objects/FSL_Audio_Preferences__c/fields/Time_Interval_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_Interval_In_Seconds__c</fullName>
    <label>Time Interval(In Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>