unpackaged/main/default/objects/FSL_Audio_Preferences__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FSL_Audio_Preferences1</relationshipName>
    <type>Lookup</type>
</CustomField>