unpackaged/main/default/objects/FSL_Audio_Preferences__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Notification_on_Cancellation__c</columns>
    <columns>Notifications_on_New_Call__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Plante</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>