unpackaged/main/default/objects/FSL_Audio_Preferences__c/listViews/Find_User_Preferences.listView-meta.xml
<ListView>
    <fullName>Find_User_Preferences</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Damyen</value>
    </filters>
    <label>Find User Preferences</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>