unpackaged/main/default/objects/FSL_Audio_Preferences__c/listViews/My_Audio_Preferences.listView-meta.xml
<ListView>
    <fullName>My_Audio_Preferences</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Notifications_on_New_Call__c</columns>
    <columns>Notification_on_Cancellation__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Audio Preferences</label>
</ListView>